--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <button class="nobutton">No</button>
                 </div>
                 <div class="box2 hide">
-                   <button>Let's Fix a Date</button>
+                   <button><a href="https://wa.link/n22wfi">Let's Fix a Date</a></button>
                 </div>
         </div>
 
